Adjust to prevent scroll on mobile

--- a/mod-1/html-and-css-module/projeto-zingen/styles/global.css
+++ b/mod-1/html-and-css-module/projeto-zingen/styles/global.css
@@ -50,6 +50,7 @@ html {
 
 body {
   background-color: var(--bg-color);
+  overflow-x: hidden;
 }
 
 h1,
